--- a/css/one.css
+++ b/css/one.css
@@ -123,13 +123,11 @@ p{
 .cargas1{
     font-family: FrutigerUltraBlack;
     color: rgb(0,170,221);
-    vertical-align: middle;
-    margin: auto 
+    font-size: 3.3em;
 }
 .cargas2{
     font-family: FrutigerUltraBlack;
-    vertical-align: middle;
-    margin: auto
+    font-size: 3em;
 }
 #sellos{
     display: table;
@@ -158,7 +156,7 @@ p{
     display: table-cell;
     vertical-align: middle;
     background: url(../img/one/circulo.png) no-repeat center / cover;
-    background-size: 320px 320px;
+    background-size: contain;
 }
 .heightlistaone{
     display: table;
@@ -210,13 +208,13 @@ p{
     position: relative;
 }
 .bannertitulo{
-    font-family: FrutigerBold;
+    font-family: FrutigerUltraBlack;
     font-size: 3em;
     color: white;
 }
 .partedos{
     background: url(../img/one/riel%204%20one.png) no-repeat center /cover; 
-    background-size: 590px 380px; 
+    background-size: 590px 380px;
     background-position: right; 
     height: auto;
 }
@@ -302,13 +300,11 @@ p{
 .cargas1{
     font-family: FrutigerUltraBlack;
     color: rgb(0,170,221);
-    vertical-align: middle;
-    margin: auto 
+    font-size: 3.3em;
 }
 .cargas2{
     font-family: FrutigerUltraBlack;
-    vertical-align: middle;
-    margin: auto
+    font-size: 3em;
 }
 #sellos{
     display: table;
@@ -331,13 +327,13 @@ p{
 }
 #colimagen{
     display: table;
-    height: 320px;
+    height: 300px;
 }
 .imagenrueda{
     display: table-cell;
     vertical-align: middle;
     background: url(../img/one/circulo.png) no-repeat center / cover;
-    background-size: 320px 320px;
+    background-size: contain;
 }
 .heightlistaone{
     display: table;
