--- a/css/one 2.css
+++ b/css/one 2.css
@@ -31,6 +31,185 @@
     position: relative;
 }
 .bannertitulo{
+    font-family: FrutigerUltraBlack;
+    font-size: 3em;
+    color: white;
+}
+.partedos{
+    background: url(../img/one/riel%204%20one.png) no-repeat center /cover; 
+    background-size: 590px 380px; 
+    background-position: right; 
+    height: auto;
+}
+.partedoshijo{
+    display: flex; 
+    position: relative;
+}
+.partedoshijohijo{
+    display: flex;
+    justify-content: flex-end;
+}
+.iconooneposicion{
+    height: 300px;
+    display: flex;
+ }
+ .iconoone{
+    align-self: flex-end;
+    height: 70%;
+}
+.textoicono{
+    display: flex;
+    height: auto;
+}
+.textoone{
+    font-size: 6em;
+    align-self: flex-end;
+    font-family: CoreSans;
+}
+.textone{
+    font-size: 1.3em;
+    font-family: FrutigerLight;
+}
+.phergonomia{
+    font-family: CoreSans;
+    font-size: 2.5em; 
+    color: rgb(0,151,221); 
+    margin: 20px
+}
+.imagenrowuno{
+    height: 300px
+}
+.variasvariantes{
+    text-align: center;
+    font-family: CoreSans;
+    color: rgb(0,151,221);
+}
+.imagenesone{
+    background: url(../img/one/riel%203%20one.png) no-repeat center /cover; 
+    background-size: 490px 250px; 
+    background-position: right; 
+    height: auto;
+}
+.posicionimagenesone{
+    display: flex;
+    position: relative;
+}
+.hijoposicionimagenesone{
+    display: flex;
+    justify-content:flex-start;
+    left: 0;
+}
+.hijoimagenesone{
+    height: 300px;
+}
+.imagenesonedos{
+    background: url(../img/one/riel%204%20one.png) no-repeat center /cover;
+    background-size: 590px 300px;
+    background-position: right;
+    height: 300px;
+}
+.hijoimagenesonedos{
+    height: 330px;
+}
+.listaone{
+    font-family: CoreSans;
+}
+p{
+    margin-bottom: 2px;
+}
+.bg-browm{
+    background-color: rgb(60,60,60);
+}
+.cargas1{
+    font-family: FrutigerUltraBlack;
+    color: rgb(0,170,221);
+    vertical-align: middle;
+    margin: auto 
+}
+.cargas2{
+    font-family: FrutigerUltraBlack;
+    vertical-align: middle;
+    margin: auto
+}
+#sellos{
+    display: table;
+    height: 300px;
+}
+.bordesellos{
+    display: flex;
+    height: 60px;
+    border-right: 7px solid;
+    padding: 10px;
+}
+.palabrasellos{
+    font-family: FrutigerUltraBlack;
+    color: rgb(0,170,221);
+    vertical-align: middle;
+    margin: auto;
+}
+#centrosellos{
+    padding: 30px
+}
+#colimagen{
+    display: table;
+    height: 320px;
+}
+.imagenrueda{
+    display: table-cell;
+    vertical-align: middle;
+    background: url(../img/one/circulo.png) no-repeat center / cover;
+    background-size: 320px 320px;
+}
+.heightlistaone{
+    display: table;
+    height: 300px; 
+}
+.container-fluid{
+    background: rgb(236,236,236);
+    display: table;
+    height: 50px;
+}
+.filtrobanner{
+    background: rgba(3,93,161,.7);
+}
+.posicionbannertitulo{
+    position: absolute;  right: 0; bottom: 0
+}
+/************RESPONSIVA LAPTOP************/
+@media screen and (max-width: 1024px){
+.bg-gris{
+    background: url("../img/actual/navB.jpg");
+}
+#responsivo{
+    max-width: 100%;
+    height: 45px;
+}
+#negritas{
+    font-weight:500;
+}
+.navbar-light .navbar-nav .nav-link{
+    color: black;
+}
+.cuadrado {
+    width: 30px; 
+    height: 100px; 
+    background: #01A9DB;
+    border-radius: 15px;
+    z-index: 999;
+    box-shadow: 5px 5px #ececec; 
+}
+
+.banner{
+    background: url(../img/one/eepos%20one%20ETK%20-%20Foto%2015.png) no-repeat center /cover; background-size:cover;
+    background-position: center;
+    height: 100%;
+    text-align: right;
+}
+.banner-content{
+    height: 300px;
+    position: relative;
+}
+.bannertitulo{
     font-family: FrutigerBold;
     font-size: 3em;
     color: white;
@@ -123,11 +302,13 @@ p{
 .cargas1{
     font-family: FrutigerUltraBlack;
     color: rgb(0,170,221);
-    font-size: 3.3em;
+    vertical-align: middle;
+    margin: auto 
 }
 .cargas2{
     font-family: FrutigerUltraBlack;
-    font-size: 3em;
+    vertical-align: middle;
+    margin: auto
 }
 #sellos{
     display: table;
@@ -156,184 +337,7 @@ p{
     display: table-cell;
     vertical-align: middle;
     background: url(../img/one/circulo.png) no-repeat center / cover;
-    background-size: contain;
-}
-.heightlistaone{
-    display: table;
-    height: 300px; 
-}
-.container-fluid{
-    background: rgb(236,236,236);
-    display: table;
-    height: 50px;
-}
-.filtrobanner{
-    background: rgba(3,93,161,.7);
-}
-.posicionbannertitulo{
-    position: absolute;  right: 0; bottom: 0
-}
-/************RESPONSIVA LAPTOP************/
-@media screen and (max-width: 1024px){
-.bg-gris{
-    background: url("../img/actual/navB.jpg");
-}
-#responsivo{
-    max-width: 100%;
-    height: 45px;
-}
-#negritas{
-    font-weight:500;
-}
-.navbar-light .navbar-nav .nav-link{
-    color: black;
-}
-.cuadrado {
-    width: 30px; 
-    height: 100px; 
-    background: #01A9DB;
-    border-radius: 15px;
-    z-index: 999;
-    box-shadow: 5px 5px #ececec; 
-}
-
-.banner{
-    background: url(../img/one/eepos%20one%20ETK%20-%20Foto%2015.png) no-repeat center /cover; background-size:cover;
-    background-position: center;
-    height: 100%;
-    text-align: right;
-}
-.banner-content{
-    height: 300px;
-    position: relative;
-}
-.bannertitulo{
-    font-family: FrutigerUltraBlack;
-    font-size: 3em;
-    color: white;
-}
-.partedos{
-    background: url(../img/one/riel%204%20one.png) no-repeat center /cover; 
-    background-size: 590px 380px;
-    background-position: right; 
-    height: auto;
-}
-.partedoshijo{
-    display: flex; 
-    position: relative;
-}
-.partedoshijohijo{
-    display: flex;
-    justify-content: flex-end;
-}
-.iconooneposicion{
-    height: 300px;
-    display: flex;
- }
- .iconoone{
-    align-self: flex-end;
-    height: 70%;
-}
-.textoicono{
-    display: flex;
-    height: auto;
-}
-.textoone{
-    font-size: 6em;
-    align-self: flex-end;
-    font-family: CoreSans;
-}
-.textone{
-    font-size: 1.3em;
-    font-family: FrutigerLight;
-}
-.phergonomia{
-    font-family: CoreSans;
-    font-size: 2.5em; 
-    color: rgb(0,151,221); 
-    margin: 20px
-}
-.imagenrowuno{
-    height: 300px
-}
-.variasvariantes{
-    text-align: center;
-    font-family: CoreSans;
-    color: rgb(0,151,221);
-}
-.imagenesone{
-    background: url(../img/one/riel%203%20one.png) no-repeat center /cover; 
-    background-size: 490px 250px; 
-    background-position: right; 
-    height: auto;
-}
-.posicionimagenesone{
-    display: flex;
-    position: relative;
-}
-.hijoposicionimagenesone{
-    display: flex;
-    justify-content:flex-start;
-    left: 0;
-}
-.hijoimagenesone{
-    height: 300px;
-}
-.imagenesonedos{
-    background: url(../img/one/riel%204%20one.png) no-repeat center /cover;
-    background-size: 590px 300px;
-    background-position: right;
-    height: 300px;
-}
-.hijoimagenesonedos{
-    height: 330px;
-}
-.listaone{
-    font-family: CoreSans;
-}
-p{
-    margin-bottom: 2px;
-}
-.bg-browm{
-    background-color: rgb(60,60,60);
-}
-.cargas1{
-    font-family: FrutigerUltraBlack;
-    color: rgb(0,170,221);
-    font-size: 3.3em;
-}
-.cargas2{
-    font-family: FrutigerUltraBlack;
-    font-size: 3em;
-}
-#sellos{
-    display: table;
-    height: 300px;
-}
-.bordesellos{
-    display: flex;
-    height: 60px;
-    border-right: 7px solid;
-    padding: 10px;
-}
-.palabrasellos{
-    font-family: FrutigerUltraBlack;
-    color: rgb(0,170,221);
-    vertical-align: middle;
-    margin: auto;
-}
-#centrosellos{
-    padding: 30px
-}
-#colimagen{
-    display: table;
-    height: 300px;
-}
-.imagenrueda{
-    display: table-cell;
-    vertical-align: middle;
-    background: url(../img/one/circulo.png) no-repeat center / cover;
-    background-size: contain;
+    background-size: 320px 320px;
 }
 .heightlistaone{
     display: table;
