--- a/css/carbon.css
+++ b/css/carbon.css
@@ -335,6 +335,7 @@
 	display: table;
 	padding-left: 0px;
     height: 200px;
+    text-align: center;
 }
 .perfildecarbono{
 	font-family: FrutigerUltraBlack;
