--- a/css/base.css
+++ b/css/base.css
@@ -32,25 +32,153 @@
 .banner{
 	text-align:right;
 	background: url(../img/base/maquina%20de%20inyeccion%20base.png) no-repeat center /cover;
-	background-size:cover;
-	position: relative;
 	background-position: center;
 	height: 100%;
 }
 .banner-content{
-	height: 200px;
+	height: 300px;
+	position: relative;
 }
 .bannersistemamodular{
-	font-family: CoreSans;
-	font-size: 2em;
-	color: white;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
-.bannertexto{
+.estilotextobannerarriba{
+	font-family: FrutigerBold;
+    font-size: 3em;
+    color: white;
+}
+.estilotextobannerabajo{
+	font-family: FrutigerUltraBlack;
+    font-size: 4.2em;
+    color: white;
+}
+
+.columnasbackground{
+	background: url(../img/base/capacidad%20de%20ampliacion%20base.png) no-repeat center /cover;
+	background-size: 400px 320px;
+	background-position: right;
+	height: auto;
+}
+.alturaiconocolumnas{
+	display: flex;
+	height: 300px;
+}
+.iconocolumnas{
+	align-self: flex-end;
+	height: 70%;
+}
+.textoiconocolumnas{
+	align-self: flex-end;
+	font-family: CoreSans;
+	font-size: 6em;
+}
+
+.columnastexto{
+	font-family: FrutigerRoman;
+    font-size: 1.5em;  
+    margin: 30px
 }
 .imagencolumnas{
-height: 300px
+height: 330px
 }
-				
+dt{
+	padding-bottom: 10px!important;
+}
+
+/************RESPONSIVA LAPTOP************/
+@media screen and (max-width: 1024px){
+.bg-gris{
+	background: url("../img/actual/navB.jpg");
+}
+#responsivo{
+	max-width: 100%;
+	height: 45px;
+}
+.bg-browm{
+	background-color: #3c3c3b;
+}
+#negritas{
+	font-weight:500;
+}
+.navbar-light .navbar-nav .nav-link{
+	color: black;
+}
+.cuadrado {
+	width: 30px; 
+	height: 100px; 
+	background: #01A9DB;
+	border-radius: 15px;
+	z-index: 999;
+}
+.cuadrado {
+	width: 30px; 
+	height: 100px; 
+	background: #01A9DB;
+	border-radius: 15px;
+	z-index: 999;
+	box-shadow: 5px 5px #ececec; 
+}
+.banner{
+	text-align:right;
+	background: url(../img/base/maquina%20de%20inyeccion%20base.png) no-repeat center /cover;
+	background-position: center;
+	height: 100%;
+}
+.banner-content{
+	height: 300px;
+	position: relative;
+}
+.bannersistemamodular{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.estilotextobannerarriba{
+	font-family: FrutigerBold;
+    font-size: 3em;
+    color: white;
+}
+.estilotextobannerabajo{
+	font-family: FrutigerUltraBlack;
+    font-size: 4.2em;
+    color: white;
+}
+
+.columnasbackground{
+	background: url(../img/base/capacidad%20de%20ampliacion%20base.png) no-repeat center /cover;
+	background-size: 400px 320px;
+	background-position: right;
+	height: auto;
+}
+.alturaiconocolumnas{
+	display: flex;
+	height: 300px;
+}
+.iconocolumnas{
+	align-self: flex-end;
+	height: 70%;
+}
+.textoiconocolumnas{
+	align-self: flex-end;
+	font-family: CoreSans;
+	font-size: 6em;
+}
+
+.columnastexto{
+	font-family: FrutigerRoman;
+    font-size: 1.5em;  
+    margin: 30px
+}
+.imagencolumnas{
+height: 330px
+}
+dt{
+	padding-bottom: 10px!important;
+}
+}
+/************RESPONSIVA TELEFONO************/			
 @media screen and (max-width: 480px){
 .bg-gris{
 	background: url("../img/actual/navB.jpg");
@@ -86,22 +214,65 @@ height: 300px
 .banner{
 	text-align:right;
 	background: url(../img/base/maquina%20de%20inyeccion%20base.png) no-repeat center /cover;
-	background-size:cover;
-	position: relative;
 	background-position: center;
 	height: 100%;
 }
 .banner-content{
-	height: 200px;
+	height: 300px;
+	position: relative;
 }
 .bannersistemamodular{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.estilotextobannerarriba{
+	font-family: FrutigerBold;
+    font-size: 1.5em;
+    color: white;
+}
+.estilotextobannerabajo{
+	font-family: FrutigerUltraBlack;
+    font-size: 2.1em;
+    color: white;
+}
+
+.columnasbackground{
+	background: url(../img/base/capacidad%20de%20ampliacion%20base.png) no-repeat center /cover;
+	background-size: 110px 170px;
+	background-position: right;
+	height: auto;
+}
+.alturaiconocolumnas{
+	display: flex;
+	height: 100px;
+}
+.iconocolumnas{
+	align-self: flex-end;
+	height: 70%;
+}
+.textoiconocolumnas{
+	align-self: flex-end;
 	font-family: CoreSans;
 	font-size: 2em;
-	color: white;
 }
-.bannertexto{
+
+.columnastexto{
+	font-family: FrutigerLight;
+    font-size: 1em;  
+    margin: 0px;
+}
+.row{
+	margin: 0!important;
+}
+.col-12{
+	text-align: center;
 }
 .imagencolumnas{
-height: 300px
+height: 230px;
+}
+dt{
+	padding-bottom: 10px!important;
+	font-size: 1em;
 }
 }
